syntax = "proto3";

import "google/protobuf/timestamp.proto";

package api;
option go_package = "./api";

message RegisterRequest {
  string id = 1;
  string pass = 2;
  string username = 3;
}

message RegisterResponse {
    string jwt = 1;
}

message DeleteUserRequest {
  string jwt = 1;
}

message DeleteUserResponse {
}

message LoginRequest {
  string id = 1;
  string pass = 2;
}

message LoginResponse {
    string jwt = 1;
}

message LogoutRequest {
  string jwt = 1;
}

message LogoutResponse {
}

message CreateCategoryRequest {
  string jwt = 1;
  string category = 2;
}

message CreateCategoryResponse {
}

message DeleteCategoryRequest {
  string jwt = 1;
  string category = 2;
}

message DeleteCategoryResponse {
}

message ListCategoriesRequest {
  string jwt = 1;
}

message ListCategoriesResponse {
  repeated string categories = 1;
}

message CreateBillRequest {
  string jwt = 1;
  string amount = 2;
  string category = 3;
  google.protobuf.Timestamp ts = 4;
}

message CreateBillResponse {
}

message DeleteBillRequest {
  string jwt = 1;
  string id = 2;
}

message DeleteBillResponse {
}

message Bill {
  string id = 1;
  string amount = 2;
  string category = 3;
  google.protobuf.Timestamp ts = 4;
}

message ListBillsRequest {
  string jwt = 1;
  google.protobuf.Timestamp start = 2;
  google.protobuf.Timestamp end = 3;
}

message ListBillsResponse {
  repeated Bill bills = 1;
}

service Api {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryResponse) {}
  rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse) {}
  rpc ListCategories (ListCategoriesRequest) returns (ListCategoriesResponse) {}
  rpc CreateBill (CreateBillRequest) returns (CreateBillResponse) {}
  rpc DeleteBill (DeleteBillRequest) returns (DeleteBillResponse) {}
  rpc ListBills (ListBillsRequest) returns (ListBillsResponse) {}
}
